[102645] [open type] Open Type history shows stale visibility info in type history